p2/confs/service.yaml
# APP1 SERVICE
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: app1
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080

---
# APP2 SERVICE
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080

---
# APP3 SERVICE
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  selector:
    app: app3
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
